peke-echo.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    dgp-origin: pekewashere
    istio-injection: enabled
  name: peke-echo-v1
---
apiVersion: v1
kind: Service
metadata:
  name: peke-echo-v1
  namespace: peke-echo-v1
  labels:
    app: peke-echo-v1
    version: v1
  annotations:
    networking.istio.io/exportTo: "*"
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8000
  selector:
    app: peke-echo-v1
    version: v1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peke-echo-v1
  namespace: peke-echo-v1
  labels:
    app: peke-echo-v1
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: peke-echo-v1
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: peke-echo-v1
        version: v1
    spec:
      containers:
      - name: echo
        image: paddycarey/go-echo
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: peke-echo-v1
  namespace: peke-echo-v1
spec:
  exportTo:
  - "*"
  host: peke-echo-v1.peke-echo-v1.svc.cluster.local
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: peke-echo-v1
  namespace: peke-echo-v1
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - hosts:
    - echopeke-z.antwerpen.be
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      mode: SIMPLE
      privateKey: /etc/istio/ingressgateway-certs/tls.key
      serverCertificate: /etc/istio/ingressgateway-certs/tls.crt
  - hosts:                                            
    - peke-echo-v1.peke-echo-v1.svc.cluster.local
    port:
      name: http
      number: 80
      protocol: HTTP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: peke-echo-v1
  namespace: peke-echo-v1
spec:
  exportTo:
  - "*"
  gateways:
  - mesh
  - peke-echo-v1/peke-echo-v1
  hosts:
  - echopeke-z.antwerpen.be
  - peke-echo-v1.peke-echo-v1.svc.cluster.local
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: peke-echo-v1.peke-echo-v1.svc.cluster.local
        subset: v1
    timeout: 55s
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: peke-echo-v1
  namespace: peke-echo-v1
spec:
  selector:
    matchLabels:
      app: peke-echo-v1
      version: v1
  action: ALLOW
  rules:
  - from:
    - source:
        requestPrincipals: ["*"]
#    - source:
#        principals: ["*"]        
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: peke-echo-v1
  namespace: peke-echo-v1
spec:
  workloadSelector:
    labels:
      app: peke-echo-v1
      version: v1
  egress:
  - hosts:
    - "*/*"
